--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Master/Release_5509/makefile
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Master/Release_5509/makefile
@@ -4,19 +4,29 @@
 
 SHELL = cmd.exe
 
-CG_TOOL_ROOT := C:/ti/ccsv5/tools/compiler/msp430
+CG_TOOL_ROOT := C:/ti/ccsv5/tools/compiler/msp430_4.1.2
 
 ORDERED_OBJS += \
 $(GEN_CMDS__FLAG) \
 "./app_code/main.obj" \
-"./otkernel/native/system.obj" \
+"./applets/udp_querytoken.obj" \
+"./applets/sys_sig_panic.obj" \
+"./applets/network_sig_route.obj" \
+"./applets/mpipe_sig_done.obj" \
+"./applets/dll_sig_rfterminate_2.obj" \
+"./applets/dll_sig_rfinit.obj" \
+"./applets/collect_sensorlist.obj" \
+"./applets/beacon_discovery.obj" \
+"./otkernel/gulp/system_gulp.obj" \
 "./otlib/veelite.obj" \
 "./otlib/session.obj" \
+"./otlib/radio_task.obj" \
 "./otlib/queue.obj" \
-"./otlib/ndef.obj" \
+"./otlib/mpipe_task.obj" \
 "./otlib/m2_transport.obj" \
 "./otlib/m2_network.obj" \
 "./otlib/m2_encode.obj" \
+"./otlib/m2_dll_task.obj" \
 "./otlib/external.obj" \
 "./otlib/crypto_aes128.obj" \
 "./otlib/crc16.obj" \
@@ -31,12 +41,14 @@ $(GEN_CMDS__FLAG) \
 "./otlib/alp_api_server.obj" \
 "./otlib/alp_api_client.obj" \
 "./otlib/OT_utils.obj" \
+"./otlib/OTAPI_tasker.obj" \
 "./otlib/OTAPI_logger.obj" \
 "./otplatform/msp430f5/usb_cdc_driver/usb_main.obj" \
 "./otplatform/msp430f5/usb_cdc_driver/usb_isr.obj" \
 "./otplatform/msp430f5/usb_cdc_driver/usb_descriptors.obj" \
 "./otplatform/msp430f5/usb_cdc_driver/usb_cdc_backend.obj" \
 "./otplatform/msp430f5/veelite_core_X2_MSP430F5.obj" \
+"./otplatform/msp430f5/platform_isr_MSP430F5.obj" \
 "./otplatform/msp430f5/platform_MSP430F5.obj" \
 "./otplatform/msp430f5/mpipe_usbcdc_MSP430F55xx.obj" \
 "./otplatform/msp430f5/mpipe_uart_MSP430F5.obj" \
@@ -45,8 +57,10 @@ $(GEN_CMDS__FLAG) \
 "./otplatform/msp430f5_lib/msp430f5_pmm.obj" \
 "./otplatform/msp430f5_lib/msp430f5_flash.obj" \
 "./otradio/cc1101/radio_CC1101.obj" \
+"./otradio/cc1101/CC1101_STM32F10x.obj" \
 "./otradio/cc1101/CC1101_MSP430F5.obj" \
 -l"libc.a" \
+"../lnk_4+24_5509.cmd" \
 
 -include ../makefile.init
 
@@ -55,19 +69,23 @@ RMDIR := RMDIR /S/Q
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include subdir_vars.mk
 -include otradio/cc1101/subdir_vars.mk
 -include otplatform/msp430f5_lib/subdir_vars.mk
 -include otplatform/msp430f5/subdir_vars.mk
 -include otplatform/msp430f5/usb_cdc_driver/subdir_vars.mk
 -include otlib/subdir_vars.mk
--include otkernel/native/subdir_vars.mk
+-include otkernel/gulp/subdir_vars.mk
+-include applets/subdir_vars.mk
 -include app_code/subdir_vars.mk
+-include subdir_rules.mk
 -include otradio/cc1101/subdir_rules.mk
 -include otplatform/msp430f5_lib/subdir_rules.mk
 -include otplatform/msp430f5/subdir_rules.mk
 -include otplatform/msp430f5/usb_cdc_driver/subdir_rules.mk
 -include otlib/subdir_rules.mk
--include otkernel/native/subdir_rules.mk
+-include otkernel/gulp/subdir_rules.mk
+-include applets/subdir_rules.mk
 -include app_code/subdir_rules.mk
 -include objects.mk
 
@@ -163,17 +181,17 @@ all: PaLFi_Master.out
 PaLFi_Master.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: MSP430 Linker'
-	"C:/ti/ccsv5/tools/compiler/msp430/bin/cl430" -vmspx --abi=coffabi -O4 --opt_for_speed=0 --define=__CCSv5__ --define=__LITTLE_ENDIAN__ --define=__MSP430F5509__ --define=BOARD_RF430USB_5509 --diag_warning=225 --display_error_number --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU23 --silicon_errata=CPU40 --printf_support=minimal -z -m"PaLFi_Master.map" --stack_size=160 --heap_size=160 --use_hw_mpy=F5 -i"C:/ti/ccsv5/ccs_base/msp430/include" -i"C:/ti/ccsv5/tools/compiler/msp430/lib" -i"C:/ti/ccsv5/tools/compiler/msp430/include" --reread_libs --warn_sections --rom_model -o "PaLFi_Master.out" $(ORDERED_OBJS)
+	"C:/ti/ccsv5/tools/compiler/msp430_4.1.2/bin/cl430" -vmspx --abi=coffabi -O4 --opt_for_speed=0 --symdebug:none --optimize_with_debug=on --define=__CCSv5__ --define=__LITTLE_ENDIAN__ --define=__MSP430F5509__ --define=BOARD_RF430USB_5509 --diag_warning=225 --display_error_number --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU40 --single_inline --remove_hooks_when_inlining -z --stack_size=160 -m"PaLFi_Master.map" --heap_size=0 --use_hw_mpy=F5 -i"C:/ti/ccsv5/ccs_base/msp430/include" -i"C:/ti/ccsv5/tools/compiler/msp430_4.1.2/lib" -i"C:/ti/ccsv5/tools/compiler/msp430_4.1.2/include" --reread_libs --warn_sections --rom_model -o "PaLFi_Master.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
 	-$(RM) $(MSP430_EXECUTABLE_OUTPUTS__QUOTED) "PaLFi_Master.out"
-	-$(RM) "otradio\cc1101\CC1101_MSP430F5.pp" "otradio\cc1101\radio_CC1101.pp" "otplatform\msp430f5_lib\msp430f5_flash.pp" "otplatform\msp430f5_lib\msp430f5_pmm.pp" "otplatform\msp430f5_lib\msp430f5_tlv.pp" "otplatform\msp430f5_lib\msp430f5_ucs.pp" "otplatform\msp430f5\mpipe_uart_MSP430F5.pp" "otplatform\msp430f5\mpipe_usbcdc_MSP430F55xx.pp" "otplatform\msp430f5\platform_MSP430F5.pp" "otplatform\msp430f5\veelite_core_X2_MSP430F5.pp" "otplatform\msp430f5\usb_cdc_driver\usb_cdc_backend.pp" "otplatform\msp430f5\usb_cdc_driver\usb_descriptors.pp" "otplatform\msp430f5\usb_cdc_driver\usb_isr.pp" "otplatform\msp430f5\usb_cdc_driver\usb_main.pp" "otlib\OTAPI_logger.pp" "otlib\OT_utils.pp" "otlib\alp_api_client.pp" "otlib\alp_api_server.pp" "otlib\alp_dashforth.pp" "otlib\alp_filedata.pp" "otlib\alp_logger.pp" "otlib\alp_main.pp" "otlib\alp_security.pp" "otlib\alp_sensor.pp" "otlib\auth.pp" "otlib\buffers.pp" "otlib\crc16.pp" "otlib\crypto_aes128.pp" "otlib\external.pp" "otlib\m2_encode.pp" "otlib\m2_network.pp" 
-	-$(RM) "otlib\m2_transport.pp" "otlib\ndef.pp" "otlib\queue.pp" "otlib\session.pp" "otlib\veelite.pp" "otkernel\native\system.pp" "app_code\main.pp" 
-	-$(RM) "otradio\cc1101\CC1101_MSP430F5.obj" "otradio\cc1101\radio_CC1101.obj" "otplatform\msp430f5_lib\msp430f5_flash.obj" "otplatform\msp430f5_lib\msp430f5_pmm.obj" "otplatform\msp430f5_lib\msp430f5_tlv.obj" "otplatform\msp430f5_lib\msp430f5_ucs.obj" "otplatform\msp430f5\mpipe_uart_MSP430F5.obj" "otplatform\msp430f5\mpipe_usbcdc_MSP430F55xx.obj" "otplatform\msp430f5\platform_MSP430F5.obj" "otplatform\msp430f5\veelite_core_X2_MSP430F5.obj" "otplatform\msp430f5\usb_cdc_driver\usb_cdc_backend.obj" "otplatform\msp430f5\usb_cdc_driver\usb_descriptors.obj" "otplatform\msp430f5\usb_cdc_driver\usb_isr.obj" "otplatform\msp430f5\usb_cdc_driver\usb_main.obj" "otlib\OTAPI_logger.obj" "otlib\OT_utils.obj" "otlib\alp_api_client.obj" "otlib\alp_api_server.obj" "otlib\alp_dashforth.obj" "otlib\alp_filedata.obj" "otlib\alp_logger.obj" "otlib\alp_main.obj" "otlib\alp_security.obj" "otlib\alp_sensor.obj" "otlib\auth.obj" "otlib\buffers.obj" "otlib\crc16.obj" "otlib\crypto_aes128.obj" "otlib\external.obj" "otlib\m2_encode.obj" 
-	-$(RM) "otlib\m2_network.obj" "otlib\m2_transport.obj" "otlib\ndef.obj" "otlib\queue.obj" "otlib\session.obj" "otlib\veelite.obj" "otkernel\native\system.obj" "app_code\main.obj" 
+	-$(RM) "otradio\cc1101\CC1101_MSP430F5.pp" "otradio\cc1101\CC1101_STM32F10x.pp" "otradio\cc1101\radio_CC1101.pp" "otplatform\msp430f5_lib\msp430f5_flash.pp" "otplatform\msp430f5_lib\msp430f5_pmm.pp" "otplatform\msp430f5_lib\msp430f5_tlv.pp" "otplatform\msp430f5_lib\msp430f5_ucs.pp" "otplatform\msp430f5\mpipe_uart_MSP430F5.pp" "otplatform\msp430f5\mpipe_usbcdc_MSP430F55xx.pp" "otplatform\msp430f5\platform_MSP430F5.pp" "otplatform\msp430f5\platform_isr_MSP430F5.pp" "otplatform\msp430f5\veelite_core_X2_MSP430F5.pp" "otplatform\msp430f5\usb_cdc_driver\usb_cdc_backend.pp" "otplatform\msp430f5\usb_cdc_driver\usb_descriptors.pp" "otplatform\msp430f5\usb_cdc_driver\usb_isr.pp" "otplatform\msp430f5\usb_cdc_driver\usb_main.pp" "otlib\OTAPI_logger.pp" "otlib\OTAPI_tasker.pp" "otlib\OT_utils.pp" "otlib\alp_api_client.pp" "otlib\alp_api_server.pp" "otlib\alp_dashforth.pp" "otlib\alp_filedata.pp" "otlib\alp_logger.pp" "otlib\alp_main.pp" "otlib\alp_security.pp" "otlib\alp_sensor.pp" "otlib\auth.pp" "otlib\buffers.pp" 
+	-$(RM) "otlib\crc16.pp" "otlib\crypto_aes128.pp" "otlib\external.pp" "otlib\m2_dll_task.pp" "otlib\m2_encode.pp" "otlib\m2_network.pp" "otlib\m2_transport.pp" "otlib\mpipe_task.pp" "otlib\queue.pp" "otlib\radio_task.pp" "otlib\session.pp" "otlib\veelite.pp" "otkernel\gulp\system_gulp.pp" "applets\beacon_discovery.pp" "applets\collect_sensorlist.pp" "applets\dll_sig_rfinit.pp" "applets\dll_sig_rfterminate_2.pp" "applets\mpipe_sig_done.pp" "applets\network_sig_route.pp" "applets\sys_sig_panic.pp" "applets\udp_querytoken.pp" "app_code\main.pp" 
+	-$(RM) "otradio\cc1101\CC1101_MSP430F5.obj" "otradio\cc1101\CC1101_STM32F10x.obj" "otradio\cc1101\radio_CC1101.obj" "otplatform\msp430f5_lib\msp430f5_flash.obj" "otplatform\msp430f5_lib\msp430f5_pmm.obj" "otplatform\msp430f5_lib\msp430f5_tlv.obj" "otplatform\msp430f5_lib\msp430f5_ucs.obj" "otplatform\msp430f5\mpipe_uart_MSP430F5.obj" "otplatform\msp430f5\mpipe_usbcdc_MSP430F55xx.obj" "otplatform\msp430f5\platform_MSP430F5.obj" "otplatform\msp430f5\platform_isr_MSP430F5.obj" "otplatform\msp430f5\veelite_core_X2_MSP430F5.obj" "otplatform\msp430f5\usb_cdc_driver\usb_cdc_backend.obj" "otplatform\msp430f5\usb_cdc_driver\usb_descriptors.obj" "otplatform\msp430f5\usb_cdc_driver\usb_isr.obj" "otplatform\msp430f5\usb_cdc_driver\usb_main.obj" "otlib\OTAPI_logger.obj" "otlib\OTAPI_tasker.obj" "otlib\OT_utils.obj" "otlib\alp_api_client.obj" "otlib\alp_api_server.obj" "otlib\alp_dashforth.obj" "otlib\alp_filedata.obj" "otlib\alp_logger.obj" "otlib\alp_main.obj" "otlib\alp_security.obj" "otlib\alp_sensor.obj" 
+	-$(RM) "otlib\auth.obj" "otlib\buffers.obj" "otlib\crc16.obj" "otlib\crypto_aes128.obj" "otlib\external.obj" "otlib\m2_dll_task.obj" "otlib\m2_encode.obj" "otlib\m2_network.obj" "otlib\m2_transport.obj" "otlib\mpipe_task.obj" "otlib\queue.obj" "otlib\radio_task.obj" "otlib\session.obj" "otlib\veelite.obj" "otkernel\gulp\system_gulp.obj" "applets\beacon_discovery.obj" "applets\collect_sensorlist.obj" "applets\dll_sig_rfinit.obj" "applets\dll_sig_rfterminate_2.obj" "applets\mpipe_sig_done.obj" "applets\network_sig_route.obj" "applets\sys_sig_panic.obj" "applets\udp_querytoken.obj" "app_code\main.obj" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
