--- a/apps/demo_palfi/proj_ccsv5/PaLFI_Slave2/.project
+++ b/apps/demo_palfi/proj_ccsv5/PaLFI_Slave2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PaLFi_Master</name>
+	<name>PaLFI_Slave2</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -81,10 +81,10 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
 	<linkedResources>
-		<link>
+        <link>
 			<name>app_code</name>
 			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
+			<location>B:/apps/demo_palfi/code_slave2</location>
 		</link>
 		<link>
 			<name>board</name>
@@ -100,51 +100,6 @@
 			<name>otlib</name>
 			<type>2</type>
 			<location>B:/otlib</location>
-		</link>
-		<link>
-			<name>otplatform</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>otradio</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>app_code/app_config.h</name>
-			<type>1</type>
-			<location>B:/apps/demo_palfi/code_master/app_config.h</location>
-		</link>
-		<link>
-			<name>app_code/build_config.h</name>
-			<type>1</type>
-			<location>B:/apps/demo_palfi/code_master/build_config.h</location>
-		</link>
-		<link>
-			<name>app_code/data_5509.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/code_master/_patch_5509stick/data_5509.c</locationURI>
-		</link>
-		<link>
-			<name>app_code/extf_code.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/code_master/_patch_5509stick/extf_code.c</locationURI>
-		</link>
-		<link>
-			<name>app_code/extf_config.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/code_master/extf_config.h</locationURI>
-		</link>
-		<link>
-			<name>app_code/main.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/code_master/main.c</locationURI>
-		</link>
-		<link>
-			<name>app_code/platform_config.h</name>
-			<type>1</type>
-			<location>B:/apps/demo_palfi/code_master/platform_config.h</location>
 		</link>
 		<link>
 			<name>applets/beacon_discovery.c</name>
@@ -182,6 +137,11 @@
 			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_std/sys_sig_panic.c</locationURI>
 		</link>
 		<link>
+			<name>applets/sys_sig_powerdown_[msp430slow].c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_std/sys_sig_powerdown_%5Bmsp430slow%5D.c</locationURI>
+		</link>
+		<link>
 			<name>applets/udp_querytoken.c</name>
 			<type>1</type>
 			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_capi/udp_querytoken.c</locationURI>
@@ -197,25 +157,9 @@
 			<location>B:/otplatform/msp430_mculib/cc430</location>
 		</link>
 		<link>
-			<name>otplatform/msp430f5</name>
+			<name>otradio/cc430</name>
 			<type>2</type>
-			<location>B:/otplatform/msp430f5</location>
-		</link>
-		<link>
-			<name>otplatform/msp430f5_lib</name>
-			<type>2</type>
-			<location>B:/otplatform/msp430_mculib/msp430f5</location>
-		</link>
-		<link>
-			<name>otradio/cc1101</name>
-			<type>2</type>
-			<location>B:/otradio/cc1101</location>
+			<location>B:/otradio/cc430</location>
 		</link>
 	</linkedResources>
-	<variableList>
-		<variable>
-			<name>OT_ROOT</name>
-			<value></value>
-		</variable>
-	</variableList>
 </projectDescription>
